feat(hub-service): verify hubadmin id before assigning to the hub & add pagination for hubs